testsuite/tests/contrib/lkt_semantic/generic_derivation/test.out
Resolving test.lkt
==================
Id   <RefId "T" test.lkt:8:24-8:25>
     references <GenericFormalTypeDecl "T" test.lkt:7:9-7:10>

Id   <RefId "GenDerivedType" test.lkt:10:19-10:33>
     references <GenericDecl "GenDerivedType" test.lkt:7:1-8:28>

Id   <RefId "RootType" test.lkt:10:34-10:42>
     references <ClassDecl "RootType" test.lkt:5:1-5:18>

Id   <RefId "RootType" test.lkt:12:19-12:27>
     references <ClassDecl "RootType" test.lkt:5:1-5:18>

Id   <RefId "RootType" test.lkt:14:4-14:12>
     references <ClassDecl "RootType" test.lkt:5:1-5:18>

Id   <RefId "GenDerivedType" test.lkt:15:4-15:18>
     references <GenericDecl "GenDerivedType" test.lkt:7:1-8:28>

Id   <RefId "RootType" test.lkt:15:19-15:27>
     references <ClassDecl "RootType" test.lkt:5:1-5:18>

Id   <RefId "r" test.lkt:15:31-15:32>
     references <FieldDecl "r" test.lkt:14:1-14:12>

Expr <RefId "r" test.lkt:15:31-15:32>
     has type <ClassDecl "RootType" test.lkt:5:1-5:18>

Id   <RefId "GenDerivedType" test.lkt:15:36-15:50>
     references <GenericDecl "GenDerivedType" test.lkt:7:1-8:28>

Id   <RefId "RootType" test.lkt:15:51-15:59>
     references <ClassDecl "RootType" test.lkt:5:1-5:18>

Expr <CastExpr test.lkt:15:31-15:61>
     has type <InstantiatedGenericType "GenDerivedType[RootType]" test.lkt:7:1-8:28>

Id   <RefId "FinalType" test.lkt:16:4-16:13>
     references <ClassDecl "FinalType" test.lkt:10:1-10:46>

Id   <RefId "r" test.lkt:16:16-16:17>
     references <FieldDecl "r" test.lkt:14:1-14:12>

Expr <RefId "r" test.lkt:16:16-16:17>
     has type <ClassDecl "RootType" test.lkt:5:1-5:18>

Id   <RefId "FinalType" test.lkt:16:21-16:30>
     references <ClassDecl "FinalType" test.lkt:10:1-10:46>

Expr <CastExpr test.lkt:16:16-16:31>
     has type <ClassDecl "FinalType" test.lkt:10:1-10:46>

Id   <RefId "OtherType" test.lkt:17:13-17:22>
     references <ClassDecl "OtherType" test.lkt:12:1-12:30>

Id   <RefId "f" test.lkt:17:25-17:26>
     references <FieldDecl "f" test.lkt:16:1-16:31>

Expr <RefId "f" test.lkt:17:25-17:26>
     has type <ClassDecl "FinalType" test.lkt:10:1-10:46>

Id   <RefId "OtherType" test.lkt:17:30-17:39>
     references <ClassDecl "OtherType" test.lkt:12:1-12:30>

Expr <CastExpr test.lkt:17:25-17:40>
     has type <ClassDecl "OtherType" test.lkt:12:1-12:30>

test.lkt:17:25: error: Invalid cast: only up/down casting allowed
17 | @invalid o: OtherType = f.as[OtherType]
   |                         ^^^^^^^^^^^^^^^

